force-app/main/default/objects/Case_Routing_Rule__mdt/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>