force-app/main/default/objects/Case_Routing_Rule__mdt/fields/Routing_Priority__c.field-meta.xml
<CustomField>
    <fullName>Routing_Priority__c</fullName>
    <label>Routing Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>