force-app/main/default/objects/Case_Routing_Rule__mdt/fields/Target_Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Queue_Developer_Name__c</fullName>
    <label>Target Queue Developer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>